# Composable-OPRF-via-Garbled-Circuits

./: README.md
GCOPRF-2HashDH/: 2HashDH_Server.cpp  2HashDH_User.cpp  BristolToDOT.py  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  garbling-scheme.cpp  garbling-scheme.h  hash2Curve.cpp  hash2Curve.hpp  hash2Curve_unit_tests.cpp  null.d  oprf_server.cpp  oprf_server.h  oprf_test.cpp  oprf_user.cpp  oprf_user.h  oprf_utils.h  run  run_2HashDH  test.cpp  testSimpleBristol.txt  user_exec.cpp
OIDA/code/: Makefile  client.c
PQ-MPC/: .gitignore  CMakeLists.txt  aes_256_bristol_format.txt  run
PQ-MPC/emp-tool/circuits/: integer.hpp
PQ-MPC/pq-oprf/: CMakeLists.txt  Server.cpp  Server.h  User.cpp  User.h  oprf_utils.h
final_benchmark_results/: WAN_2HashDH_benchmark_results_2022-08-19_14_24.txt  WAN_OPUS_benchmark_results_2023-6-9_10_29.txt  WAN_gcoprf_benchmark_results_aes_128_2023-07-31_15_59.txt  WAN_gcoprf_benchmark_results_aes_256_2023-07-31_16_04.txt  WAN_lattice_benchmark_results_2022-08-22_21_20.txt  WAN_pq_gcoprf_benchmark_results_2022-08-19_21_17.txt  WAN_pq_gcoprf_benchmark_results_aes_256_2023-07-31_17_51.txt  local_2HashDH_benchmark_results_2022-08-19_10_24.txt  local_OPUS_benchmark_results_2023-6-9_10_0.txt  local_OPUS_benchmark_results_7_6_2023.txt  local_gcoprf_benchmark_results_aes_128_2023-07-31_11_43.txt  local_gcoprf_benchmark_results_aes_256_2023-07-31_11_42.txt  local_lattice_benchmark_results_2023-01-08_23_02.txt  local_pq_gcoprf_benchmark_results_2022-08-19_20_59.txt  local_pq_gcoprf_benchmark_results_aes_256_2023-07-31_17_15.txt  net_pq_gcoprf_benchmark_results_2022-08-25_11_37.txt
lattice-oprf/: ADDS_oprf.sage  ADDS_oprf.sage.py  ADDS_oprf_server.sage  ADDS_oprf_server.sage.py  ADDS_oprf_user.sage  ADDS_oprf_user.sage.py
